# pas-cg

./: .buildinfo  .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.py  docker-build  docker-run  genindex.html  index.html  load_modules  objects.inv  quickstart.html  search.html  searchindex.js
cg/: CMakeLists.txt  default.yml
cg/data/1ubq/: inputfile.yml
cg/data/1xq8/: inputfile.yml
cg/data/1xq8-v2/: inputfile.yml  new.yml
cg/data/1xq8-v3/: inputfile.yml
cg/data/1xq8mult/: 2ptt.yml  inputfile.yml
cg/data/9aac/: inputfile.yml
cg/data/9aac-qa/: 9aac.yml  inputfile.yml
cg/data/TEST/: inputfilenew.yml
cg/data/TEST_2/: inputfilenew.yml
cg/data/TEST_3/: inputfile.yml  md05_2.csv  test.yml
cg/data/alpha/: inputfile.yml
cg/data/alpha2/: inputfile.yml  new.yml
cg/data/default/: angle.csv  dihedral.csv  inputfile.yml
cg/data/dense_100/: inputfile.yml
cg/data/dense_300/: inputfile.yml
cg/data/glut/: glut.yml  inputfile.yml
cg/data/large/: inputfile  inputfile.yml
cg/data/mhp1a/: inputfilenew.yml  mhp1a.yml  mj-matrix.csv
cg/data/mid/: inputfile.yml
cg/data/mid2/: inputfile.yml  updatesq.map  updatesq.out
cg/data/squeeze/: inputfile.yml
cg/data/squeezing14/: default-v2.yml  default.yml  inputfile.yml  test.yml
cg/data/start2/: inputfilenew2.yml
cg/ext/boost/: CMakeLists.txt
cg/ext/cparse/: .gitignore  CMakeLists.txt
cg/ext/ioxx/: CMakeLists.txt
cg/ext/ioxx/src/: convert.cpp  csv.cpp  read_csv_row.h
cg/ext/nitro/: CMakeLists.txt
cg/ext/version2-2.02.00/: CMakeLists.txt
cg/ext/yaml-cpp-0.7.0/: CMakeLists.txt
cg/include/cg/: config.h
cg/include/cg/afm/: compiled.h  parameters.h  stats.h
cg/include/cg/amino/: aa_data.h  amino_acid.h  compiled.h  sync_data.h
cg/include/cg/angles/: aa_heur_pair.h  parameters.h
cg/include/cg/base_forces/: disulfide.h  harmonic.h  lj.h  lj_variants.h  shifted_lj.h  sink_lj.h  spec.h
cg/include/cg/chir/: chiral_quad.h  eval_forces.h  feature.h  parameters.h
cg/include/cg/ckpt/: make_checkpoint.h  parameters.h
cg/include/cg/cuda/: dev_var.cuh  dev_var.h  interop.h  stream.h
cg/include/cg/dh/: const.h  const_cuda.h  pair.h  parameters.h  rel.h  update_pairs.h
cg/include/cg/features/: parameters.h
cg/include/cg/files/: convert.h  files.h  node.h  sl4.h
cg/include/cg/force_afm/: eval_forces.h  parameters.h
cg/include/cg/general/: parameters.h
cg/include/cg/heur/: aa_heur_pair.h
cg/include/cg/input/: model.h  morph_into_saw.h  parameters.h  pdb_file.h  (+2 more)
cg/include/ioxx/: convert.h  ioxx.h  table.h
cg/include/nitro/: at.h  type_list.h
cg/scripts/: gen_asm  profile
cg/src/: main.cpp
cg/src/afm/: parameters.cpp  stats.cpp
cg/src/amino/: aa_data.cpp  amino_acid.cpp  compiled.cpp
cg/src/base_forces/: disulfide_force.cpp  lj_variants.cpp
cg/src/chir/: eval_forces.cpp  parameters.cpp
cg/src/dh/: update_pairs.cpp
cg/src/features/: parameters.cpp
cg/src/force_afm/: eval_forces.cpp  parameters.cpp
cg/src/general/: parameters.cpp
cg/src/heur/: aa_heur_pair.cpp
cg/src/input/: fields.cpp  map_file.cpp  map_file.h  model.cpp  morph_into_saw.cpp  parameters.cpp  pdb_file.cpp  records.cpp  seq_file.cpp
cg/src/io/: fields.cpp  fields.h  map_file.cpp  map_file.h  pdb.cpp  records.cpp  records.h  seq_file.cpp
cg/src/ioxx/: convert.cpp  csv.cpp  read_csv_row.h  table.cpp
cg/src/langevin/: legacy_step.cpp  parameters.cpp  step.cpp
cg/src/nat_ang/: eval_forces.cpp  parameters.cpp
cg/src/nat_cont/: eval_forces.cpp  parameters.cpp  report.cpp  update_contacts.cpp
cg/src/nl/: cell_update.cpp  legacy_update.cpp  order.h  parameters.cpp  verify.cpp
cg/src/output/: export_pdb.cpp  gyration.cpp  hook.cpp  make_report.cpp  parameters.cpp  report_data.cpp  report_state.cpp  rmsd.cpp  stats.cpp  structure.cpp
cg/src/pauli/: eval_forces.cpp  parameters.cpp  update_pairs.cpp
cg/src/pbar/: parameters.cpp  render.cpp
cg/src/pid/: eval_forces.cpp  parameters.cpp  update_bundles.cpp
cg/src/qa/: contact_type.cpp  count_cys_neigh.cpp  finish_processing.cpp  lj_variants.cpp  parameters.cpp  prepare_nh.cpp  process_candidates.cpp  process_contacts.cpp  report.cpp  sift_candidates.cpp  update_free_pairs.cpp
cg/src/simul/: .gitignore  default.yml  dynamics.cpp  kernels.cpp  parameters.cpp  program.cpp  simulation.cpp  state.cpp  thread.cpp  thread_main.cpp  thread_setup.cpp
cg/src/state/: model.cpp
cg/src/tether/: eval_forces.cpp  parameters.cpp
cg/src/types/: amino_acid.cpp
cg/src/utils/: ioxx_interop.cpp  quantity.cpp  text.cpp
cg/src/vel_afm/: eval_forces.cpp  parameters.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/cmake/: FindSphinx.cmake
docs/source/: conf.py  index.rst  quickstart.md  tutorial.md
docs/source/dev/: index.md
docs/source/user/: _afm.md  _amino.md  _chir.md  _ckpt.md  _formats.md  _lang.md  _lrep.md  _nc.md  _nl.md  _output.md  _pauli.md  _qa.md  _sbox.md  _tether.md  aa_data.md  afm.md  base_forces.md  chir.md  contacts.md  dh.md  diff.md  files.md  general.md  index.md  nat_cont.md  nat_dih.md  output.md  pauli.md  qa.md  repo.md  tether.md  units.md
fort/: CMakeLists.txt  README.txt  cg_pho5.f  cg_pho6.f
fort/data/dense_100/: inputfile  parametersMD05_pho.txt
fort/data/dense_300/: inputfile
fort/data/example3/: agli.map  glut.txt  inputfile3  parameters.txt  xhmc.map  xhmn.map  ygli.map  yhmc.map
fort/data/mid2/: inputfile
fort/data/sample/: inputfile
fort/data/start2/: inputfile
parity/: CMakeLists.txt  Sandbox.ipynb  cg.f  cg_pho5.f  cg_pho6.f  options.yml  parity.py  requirements.txt
parity/tests/1ubq/: comp.csv
parity/tests/9aac/: comp.csv
parity/tests/TEST/: comp.csv
parity/tests/TEST_2/: comp.csv
parity/tests/TEST_3/: comp.csv
parity/tests/input_test/: comp.csv
parity/tests/sample/: comp.csv
parity/tests/start2/: comp.csv
pas-cg/: CMakeLists.txt
pas-cg/data/: super.yml
pas-cg/src/: main.cpp
pas-cg/src/types/: amino_acid.cpp
pas-cg/src/utils/: quantity.cpp
reference/f77/: CMakeLists.txt  cg_pho5.f
tests/f77/: CMakeLists.txt  cg.f  cg_pho5.f
(+827 files in other folders)
